--- a/WebContent/jsp/header.html
+++ b/WebContent/jsp/header.html
@@ -1,5 +1,5 @@
 <!--Main Navigation-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: white !important; border-bottom: 1px solid rgb(225, 225, 225, 1);">
+<nav class="navbar fixed-top mb-3 navbar-expand-lg navbar-light bg-light" style="background-color: white !important; border-bottom: 1px solid rgb(225, 225, 225, 1);">
     <a class="navbar-brand" href="#"><strong>Logo</strong></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
