Application info in Modal on dashboard
Implemented Modal to display application information onc application click. Provided user to change Application data.

Updating AJAX request yet to be completed.

Implemented auto-focus on login page

--- a/WebContent/jsp/login.html
+++ b/WebContent/jsp/login.html
@@ -165,7 +165,11 @@
                     }
                 });
             }
-        })
+        });
+        $(document).ready(function () {            
+            // Ready, then Focus on Input
+            $("#your_email").focus();
+        });
     </script>
 </body>
 </html>
