--- a/WebContent/jsp/footer.html
+++ b/WebContent/jsp/footer.html
@@ -6,7 +6,7 @@
 <!-- Footer -->
 <!-- <footer class="page-footer font-small blue pt-4">
 
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+  <div class="footer-copyright text-center py-3">ï¿½ 2020 Copyright:
     <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
   </div>
 
