--- a/WebContent/jsp/footer.html
+++ b/WebContent/jsp/footer.html
@@ -16,6 +16,6 @@
 
 <!-- Copyright -->
 <div class="footer-copyright text-center">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/">Company Name</a>
+    <a href="https://mdbootstrap.com/">jRepo.com</a>
 </div>
 <!-- Copyright -->
