--- a/WebContent/jsp/header.html
+++ b/WebContent/jsp/header.html
@@ -1,23 +1,15 @@
 <!--Main Navigation-->
 <nav class="navbar fixed-top mb-3 navbar-expand-lg navbar-light bg-light" style="background-color: white !important; border-bottom: 1px solid rgb(225, 225, 225, 1);">
-    <a class="navbar-brand" href="#"><strong>Logo</strong></a>
+    <a class="navbar-brand" href="#"><strong><img class="logo" src="/images/logo.png"> </img></strong></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">You Are Awesome!<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
+        
         </ul>
     </div>
 </nav>
