--- a/WebContent/jsp/sign-up.html
+++ b/WebContent/jsp/sign-up.html
@@ -12,6 +12,7 @@
     <!-- Main css -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/login.css">
 
 
     <!-- CSS only -->
@@ -70,10 +71,7 @@
                                     </div>
                                     <div class="signup-image">
                                         <figure><img src="images/signup-image.jpg" alt="sing up image"></figure>
-                                        <div>
-                                            Have an account ? <a href="login" class="">Login here</a>
-                                        </div>
-
+                                        <div class = "singup-login-toggle-div"> Have an account ? <a href="login" class="">Login here</a></div>
                                     </div>
                                 </div>
                             </div>
